fix error overflow

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@
 
 body {
     height: 100svh;
-    display: grid;
+    display: flex;
     margin: 0;
     padding: 0;
 }
